<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Schedulent</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="next">Next</string>
    <string name="title_activity_sub">SubActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="title_activity_time_table_week">TimeTableWeek</string>
    <string name="title_activity_time_table_entry">TimeTableEntry</string>
    <string name="discard_button">Discard</string>
    <string name="save_button">Save</string>
    <string name="Subject">Subject</string>
    <string name="teacherName">Teacher Name</string>
    <string name="days">Days:</string>
    <string name="startTime">Start Time:</string>
    <string name="endTime">End Time:</string>
    <string name="title_activity_assignment_entry">AssignmentEntry</string>
    <string name="title_activity_subject_remove">SubjectRemoveActivity</string>
    <string name="title_activity_notification_maker">NotificationMaker</string>
    <string name="title_activity_settings">SettingsActivity</string>
	
	
	
	 <string name="subjectName" translatable="false">Subject Name</string>
    <string name="timings" translatable="false">Timings</string>
    <string name="edit" translatable="false">EDIT</string>
    <string name="title_activity_detail" translatable="false">DetailActivity</string>
    <string name="all_present" translatable="false">ALL PRESENT</string>
    <string name="all_absent" translatable="false">ALL ABSENT</string>
    <string name="all_cancelled" translatable="false">ALL CANCELLED</string>

    <!-- Strings related to edit pane -->
    <string name="fill_your_att" translatable="false">Fill your Attendance</string>
    <string name="present" translatable="false">Present</string>
    <string name="absent" translatable="false">Absent</string>

    <string name="save" translatable="false">OK</string>
    <string name="cancel" translatable="false">CANCEL</string>

    <!-- Strings related to detail fragment -->
    <string name="timingsInaWeek" translatable="false">Timings</string>
    <string name="classesAttended" translatable="false">Classes Attended Till Now</string>
    <string name="classCanBunk" translatable="false">Classes safely can be bunked</string>
    <string name="title_activity_subject_detail">Subject Detail</string>
    <string name="title_activity_view_attendance">ViewAttendance</string>
    <string name="title_activity_details">Details</string>
    <string name="title_activity_fill_attendance">FillAttendance</string>

    <!-- Strings related to fragment details -->
    <string name="taughtBy" translatable="false">Teachers</string>
    <string name="title_activity_event_details">EventDetails</string>


    <!--  Strings for notifications settings -->
    <string name="pref_header_notifications_label">Notifications</string>
    <string name="pref_header_notifications_key" translatable="false">notifications</string>
    <string name="pref_fillAttendance_label">Fill Attendance</string>
    <string name="pref_fillAttendance_key" translatable="false">fillAttendance</string>
    <string name="pref_fillAttendance_sum">Notify everyday to fill attendance of that day.</string>
    <string name="pref_Events_label">Events</string>
    <string name="pref_Events_key">events</string>
    <string name="pref_events_all">all</string>
    <string name="pref_events_sum">Notify about your events.</string>

    <!-- Strings for silence service-->
    <string name="pref_header_silent_label">Silence</string>
    <string name="pref_header_silent_key" translatable="false">silence</string>
    <string name="pref_silent_label">Silent Mode</string>
    <string name="pref_silent_key">silent_checkbox</string>
</resources>
