<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_vertical_margin"
    android:paddingTop="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_horizontal_margin"
    tools:context="com.example.kaano8.attendence.DetailActivity$PlaceholderFragment"
    android:scrollbars="vertical"
    android:orientation="vertical"
    android:background="#FFFFFF">

    <ImageView
        android:id="@+id/pieChart"
        android:src="@drawable/donut"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"/>
    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#708090"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/subName"
        android:text="@string/subjectName"
        android:textSize="18dp"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/teacherName"
        android:text="@string/teacherName"
        android:gravity="center"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/timings"
        android:text="@string/timingsInaWeek"
        android:gravity="center"
        android:layout_marginBottom="40dp"/>

    <LinearLayout
        android:layout_margin="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="#708090"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/classesAttended"
        android:text="@string/classesAttended"
        android:gravity="center"
        android:layout_marginBottom="40dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/classCanBunk"
        android:text="@string/classCanBunk"
        android:gravity="center"
        android:layout_marginBottom="40dp"/>
</LinearLayout>
