<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_marginTop="5dp"
    android:layout_marginBottom="5dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/card">

    <!-- The main linear layout -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#eee"
        android:paddingBottom="10dp"
        android:layout_gravity="center_vertical">

        <!-- Title text view -->
        <TextView
            android:text="@string/subjectName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/subName"
            android:gravity="left"
            android:background="@color/primaryColor"
            android:padding="12dp"
            android:textColor="@color/primaryColorLight"
            android:textSize="19sp"/>

        <TextView
            android:text="@string/teacherName"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/teacherName"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            />


        <TextView
            android:text="@string/timings"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/timings"
            android:gravity="center_vertical"
            android:layout_marginTop="15dp"
            android:textSize="15sp"
            android:paddingLeft="10dp"
            />
    </LinearLayout> <!-- End of main linear layout -->
</android.support.v7.widget.CardView>
